# multiAgentStandardsProtocol

./: .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  A2A_PROTOCOL_META_AGENTS.md  ADMIN_PANEL_DELIVERY.md  ADMIN_PANEL_GUIDE.md  AGENT_CATALOG.json  AGENT_CATALOG.md  AGENT_DISCOVERY_PROTOCOL.md  AGENT_GUIDE.md  AGENT_SHOWCASE.html  API_INTEGRATION_GUIDE.md  API_REFERENCE.md  APQC_3.1.2_BREAKDOWN.md  APQC_AGENTS_AUDIT_REPORT.md  APQC_AGENT_FACTORY_GUIDE.md  APQC_BUSINESS_EXPANSION_DESIGN.md  APQC_BUSINESS_LOGIC_IMPLEMENTATIONS.md  APQC_CATEGORIES_10_11_TEST_SUMMARY.md  APQC_EXPANSION_SUMMARY.md  APQC_FACTORY_DELIVERY_SUMMARY.md  APQC_PCF_AGENT_LIBRARY_DESIGN.md  APQC_PCF_BPMN_INTEGRATION_ARCHITECTURE.md  APQC_PCF_COMPLETE_HIERARCHY.md  APQC_PCF_IMPLEMENTATION_READINESS.md  APQC_PCF_TRACKING.json  APQC_PCF_TRACKING.md  APQC_TESTING_COMPLETE.md  APQC_TESTING_FRAMEWORK_SUMMARY.md  ARCHITECTURE.md  AUTHORITATIVE_DATA_SOURCES.md  AUTONOMOUS_DASHBOARD_BUILD.md  BAP_IMPLEMENTATION_SUMMARY.md  BASEAGENT_ANALYSIS.md  BASEAGENT_ANALYSIS_PHASE8.md  BASEAGENT_CONSOLIDATION_COMPLETE.md  BASEAGENT_CONSOLIDATION_PLAN.md  BROKEN_LINKS_AUDIT.md  (+185 more)
.claude/: AGENT_AUDIT_REPORT.md  APQC_QUICK_REF.md  CONTEXT.md  QUICK_REFERENCE.md  SESSION_LOG.md  settings.local.json
agent_cards/: apqc_10_1_1_1_ehs_management.json  apqc_10_1_1_1_financial_reporting.json  apqc_10_2_1_1_period_close.json  apqc_10_2_2_1_regulatory_compliance.json  apqc_10_3_1_1_incident_response.json  apqc_11_1_1_1_it_service_management.json  apqc_12_1_1_1_contract_management.json  apqc_12_2_1_1_vendor_management.json  apqc_13_1_1_1_project_management.json  apqc_13_3_1_1_quality_management.json  apqc_1_1_1_1_strategic_planning.json  apqc_2_1_1_1_product_development.json  apqc_2_3_1_1_innovation_management.json  apqc_3_1_1_1_market_research.json  apqc_3_2_1_1_sales_pipeline.json  apqc_3_3_1_1_marketing_campaign.json  apqc_4_1_1_1_customer_order_management.json  apqc_4_1_1_1_supply_chain_planning.json  apqc_4_3_1_1_inventory_management.json  apqc_4_3_1_1_manufacturing_operations.json  apqc_5_1_1_1_customer_service.json  apqc_6_1_1_1_talent_acquisition.json  apqc_6_4_1_1_performance_management.json  apqc_6_5_1_1_learning_development.json  apqc_7_2_1_1_asset_management.json  apqc_7_2_1_1_employee_onboarding.json  apqc_7_3_1_1_risk_management.json  apqc_7_5_1_1_payroll_processing.json  apqc_8_1_1_1_accounts_receivable.json  apqc_8_1_1_1_budget_planning.json  apqc_8_2_1_1_accounts_payable.json  apqc_8_3_1_1_treasury_management.json  apqc_9_1_1_1_facilities_management.json  apqc_9_1_1_1_purchase_order_processing.json  apqc_9_2_1_1_invoice_processing.json  apqc_9_2_1_1_vendor_management.json  apqc_9_3_1_1_expense_management.json
api_server/: __init__.py  ai_service.py  config.py  database.py  errors.py  logging_config.py  main.py  requirements.txt  security.py  services.py
archive/rust_crates_2025-11-06/crates/agentic_api/: Cargo.toml  dashboard.html
archive/rust_crates_2025-11-06/crates/agentic_api/src/: main.rs
archive/rust_crates_2025-11-06/crates/agentic_business/: Cargo.toml
archive/rust_crates_2025-11-06/crates/agentic_business/src/development/: infrastructure_agent.rs  models.rs
archive/rust_crates_2025-11-06/crates/agentic_business/src/opportunity/: competitor_analysis_agent.rs  mod.rs  opportunity_evaluation_agent.rs
archive/rust_crates_2025-11-06/crates/agentic_business/src/revenue/: marketing_agent.rs  mod.rs  optimization_agent.rs  revenue_manager.rs
archive/rust_crates_2025-11-06/crates/agentic_business/src/validation/: mod.rs  technical_feasibility_agent.rs  validation_manager.rs
archive/rust_crates_2025-11-06/crates/agentic_cli/: Cargo.toml
archive/rust_crates_2025-11-06/crates/agentic_cli/src/: main.rs
archive/rust_crates_2025-11-06/crates/agentic_coordination/: Cargo.toml
archive/rust_crates_2025-11-06/crates/agentic_coordination/src/: lib.rs
archive/rust_crates_2025-11-06/crates/agentic_observability/: Cargo.toml
archive/rust_crates_2025-11-06/crates/agentic_protocols/: Cargo.toml
archive/rust_crates_2025-11-06/crates/agentic_protocols/python/: acp_implementation.py
archive/rust_crates_2025-11-06/crates/agentic_protocols/src/: a2a_bus.rs
benchmarks/: protocol_benchmarks.py
bpmn_processes/: APQC_3_2_2_1_COMPLETE.bpmn  APQC_7_5_1_1_COMPLETE.bpmn  APQC_9_1_1_1_COMPLETE.bpmn  APQC_9_2_1_1.bpmn  APQC_9_2_1_1_COMPLETE.bpmn  APQC_9_6_2_3_COMPLETE.bpmn
bpmn_processes_complete/: 10_1_1_5.bpmn  10_1_1_6.bpmn  10_1_1_7.bpmn  10_1_1_8.bpmn  10_1_1_9.bpmn  10_1_2_5.bpmn  10_1_2_6.bpmn  10_1_2_7.bpmn  10_1_2_8.bpmn  10_1_3_5.bpmn  10_1_3_6.bpmn  10_1_3_7.bpmn  10_1_3_8.bpmn  10_2_1_5.bpmn  10_2_1_6.bpmn  10_2_1_7.bpmn  10_2_1_8.bpmn  10_2_2_5.bpmn  10_2_2_6.bpmn  10_2_2_7.bpmn  10_2_2_8.bpmn  10_2_3_5.bpmn  10_2_3_6.bpmn  10_2_3_7.bpmn  10_2_3_8.bpmn  10_3_1_5.bpmn  10_3_1_6.bpmn  10_3_1_7.bpmn  10_3_2_5.bpmn  10_3_2_6.bpmn  10_4_1_5.bpmn  10_4_1_6.bpmn  11_1_1_5.bpmn  11_1_1_6.bpmn  11_1_1_7.bpmn  11_1_1_8.bpmn  11_1_1_9.bpmn  11_1_2_5.bpmn  11_1_2_6.bpmn  11_1_2_7.bpmn  (+1060 more)
colorful-landing-site/: README.md  features.html  index.html
config/: production.yaml
crates/agentic_api/: Cargo.toml
crates/agentic_api/src/: business.rs  dashboard_ws.rs  execution.rs  lib.rs
crates/agentic_core/: Cargo.toml
crates/agentic_core/src/: communication.rs  lib.rs  tool.rs
crates/agentic_domain/: Cargo.toml
crates/agentic_domain/src/: agent_genome.rs  lib.rs
crates/agentic_factory/: Cargo.toml
crates/agentic_factory/src/: lib.rs
crates/agentic_learning/: Cargo.toml
crates/agentic_learning/src/: engine.rs  lib.rs  memory_system.rs  transfer.rs
crates/agentic_meta/: Cargo.toml
crates/agentic_meta/src/: code_generator.rs  factory_agent.rs  lib.rs  requirements.rs
crates/agentic_runtime/: Cargo.toml
crates/agentic_runtime/src/: scheduler.rs
crates/agentic_standards/: Cargo.toml
crates/agentic_standards/src/: lib.rs
dashboard_frontend/: admin_panel.tsx  agent_config.tsx  app.tsx  apqc_hierarchy_explorer.tsx  index.html  integration_manager.tsx  package.json  (+3 more)
(+3175 files in other folders)
