[workspace]
members = [
    "crates/agentic_core",
    "crates/agentic_domain",
    "crates/agentic_learning",
    "crates/agentic_coordination",
    "crates/agentic_factory",
    "crates/agentic_protocols",
    "crates/agentic_observability",
    "crates/agentic_runtime",
    "crates/agentic_meta",
    "crates/agentic_business",
    "crates/agentic_api",
    "crates/agentic_standards",
    "crates/agentic_cli",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sillinous Team"]
license = "Apache-2.0"
repository = "https://github.com/sillinous/multiAgentStandardsProtocol"
homepage = "https://github.com/sillinous/multiAgentStandardsProtocol"
description = "A revolutionary multi-agent ecosystem with autonomous learning, self-organization, and emergent behaviors"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
opentelemetry = { version = "0.24", features = ["logs", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.17", features = ["logs", "metrics", "trace"] }
opentelemetry-semantic-conventions = "0.16"

# HTTP and networking
axum = "0.7"
hyper = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression"] }
tokio-tungstenite = "0.23"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID and ID generation
uuid = { version = "1.10", features = ["v4", "serde"] }
nanoid = "0.4"

# Database and storage
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "json"] }
rocksdb = "0.22"

# Caching
moka = { version = "0.12", features = ["future"] }

# Machine learning and embeddings
ndarray = "0.15"
burn = { version = "0.13", features = ["backend-ndarray"] }

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }

# Testing
mockall = "0.12"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
