[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superstandard"
version = "1.0.0"
description = "The industry-leading standard for building production-grade multi-agent systems"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "SuperStandard Contributors"}
]
requires-python = ">=3.10"
keywords = [
    "multi-agent",
    "agent-protocols",
    "ANP",
    "ACP",
    "BAP",
    "agent-coordination",
    "blockchain-agents",
    "autonomous-agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "asyncio-mqtt>=0.16.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

trading = [
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

blockchain = [
    "web3>=6.0.0",
    "eth-account>=0.10.0",
]

ml = [
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "scikit-learn>=1.3.0",
]

all = [
    "superstandard[dev,trading,blockchain,ml]",
]

[project.urls]
Homepage = "https://github.com/sillinous/multiAgentStandardsProtocol"
Documentation = "https://superstandard.readthedocs.io"
Repository = "https://github.com/sillinous/multiAgentStandardsProtocol"
Issues = "https://github.com/sillinous/multiAgentStandardsProtocol/issues"

[project.scripts]
superstandard = "superstandard.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["superstandard*"]

[tool.setuptools.package-data]
superstandard = ["py.typed", "*.json", "*.yaml"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | crates
  | target
)/
'''

# Ruff configuration (replaces flake8, isort, pylint)
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["crates", "target", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["superstandard"]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
exclude = [
    "crates/",
    "target/",
    ".venv/",
    "build/",
]

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "web3.*",
    "selenium.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=superstandard",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["src/superstandard"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
