[package]
name = "agentic_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core abstractions and traits for the agentic ecosystem"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
