[package]
name = "agentic_domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Domain models for agent evolution, learning, and coordination"

[dependencies]
agentic_core = { path = "../agentic_core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ndarray = { workspace = true }
