[package]
name = "agentic_factory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AgentFactory meta-agent for autonomous agent generation"

[dependencies]
agentic_core = { path = "../agentic_core" }
agentic_domain = { path = "../agentic_domain" }
agentic_learning = { path = "../agentic_learning" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
