[package]
name = "agentic_learning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Learning substrate for multi-agent systems"

[dependencies]
agentic_core = { path = "../agentic_core" }
agentic_domain = { path = "../agentic_domain" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
ndarray = { workspace = true }
