[package]
name = "agentic_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "REST API and WebSocket server for the agentic ecosystem"

[dependencies]
agentic_core = { path = "../agentic_core" }
agentic_domain = { path = "../agentic_domain" }
agentic_factory = { path = "../agentic_factory" }
agentic_standards = { path = "../agentic_standards" }
agentic_runtime = { path = "../agentic_runtime" }
agentic_learning = { path = "../agentic_learning" }
agentic_protocols = { path = "../agentic_protocols" }
agentic_meta = { path = "../agentic_meta" }
agentic_business = { path = "../agentic_business" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { version = "0.3", features = ["std"] }
