[package]
name = "agentic_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI interface for the agentic ecosystem"

[dependencies]
agentic_core = { path = "../agentic_core" }
agentic_domain = { path = "../agentic_domain" }
agentic_learning = { path = "../agentic_learning" }
agentic_factory = { path = "../agentic_factory" }
agentic_standards = { path = "../agentic_standards" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
