[package]
name = "agentic_coordination"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-agent orchestration and coordination patterns"

[dependencies]
agentic_core = { path = "../agentic_core" }
agentic_domain = { path = "../agentic_domain" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
