[package]
name = "agentic_protocols"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Protocol implementations (A2A, MCP, ANS)"

[dependencies]
agentic_core = { path = "../agentic_core" }
agentic_domain = { path = "../agentic_domain" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
